fix: project img height fix on mobile

--- a/app/assets/styles/modules/page-modules/portfolio/_project.scss
+++ b/app/assets/styles/modules/page-modules/portfolio/_project.scss
@@ -29,25 +29,37 @@
 
 	&__image-container {
 		width: 100%;
-		max-height: 400px;
+		// max-height: 300px;
 		margin: 0 0 1rem 0;
 		order: 1;
 		position: relative;
 
+		@include screenSize(atSmall) {
+			// max-height: 400px;
+		}
 		@include screenSize(atMedium) {
 			margin: 0 0 0 5%;
 			width: 50%;
 			order: 2;
 		}
+
 		img {
 			width: auto;
 			max-width: 100%;
-			max-height: 100%;
+			max-height: 300px;
 			box-shadow: 0 1px 1px rgba(0, 0, 0, 0.11), 0 2px 2px rgba(0, 0, 0, 0.11), 0 4px 4px rgba(0, 0, 0, 0.11), 0 8px 8px rgba(0, 0, 0, 0.11),
 				0 16px 16px rgba(0, 0, 0, 0.11), 0 32px 32px rgba(0, 0, 0, 0.11);
 
 			&#mobile-img {
 				box-shadow: none;
+			}
+
+			@include screenSize(atSmall) {
+				max-height: 500px;
+			}
+
+			@include screenSize(atMedium) {
+				max-height: 600px;
 			}
 		}
 	}
